--- a/pages/resets/reset.html
+++ b/pages/resets/reset.html
@@ -11,6 +11,7 @@
 
 <body>
   <header>
+    <span class="span-header">inicio</span>
   </header>
   <div class="button-interrogacao">
     <a href="#"><button class="btn-grad"></button></a>
