--- a/pages/you lose/youlose.html
+++ b/pages/you lose/youlose.html
@@ -7,21 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../resets/reset.css">
   <link rel="stylesheet" href="youlose.css">
+  <link rel="shortcut icon" href="img/favicongg-removebg-preview.png" type="image/x-icon">
   <title>You Lose</title>
 </head>
 
 <body>
   <header>
-    <span class="span-header">you lose</span>
+    <span class="span-header">You lose</span>
   </header>
-  <h1>Você perdeu! <br>
+  <h1 style="font-family: 'Creepster', cursive;
+  text-align: center;
+  color: brown;
+  font-size: 5rem;
+  margin-top: 50px;
+  letter-spacing: 3px;">Você perdeu! <br>
     O assassino escapou!</h1>
-  <div class="container">
+  <div class="container" style="max-width: 600px; margin: auto;">
     <img class="images" src="img/img01.png" alt="">
   </div>
 
   <div class="button-interrogacao">
-    <a href="#"><button class="btn-grad">Voltar para o início</button></a>
+    <a href="#"><button class="btn-grad">
+        < Voltar para o início</button></a>
   </div>
 </body>
 
