--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="pages/Inicio/img/favicon1.png" type="image/x-icon">
   <link rel="stylesheet" href="pages/resets/reset.css">
   <link rel="stylesheet" href="pages/Inicio/index.css">
-  <title>Document</title>
+  <title>Início</title>
 </head>
 
 <body>
