--- a/pages/Interrogação/interrogar.html
+++ b/pages/Interrogação/interrogar.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../Inicio/img/favicon2.png" type="image/x-icon">
   <link rel="stylesheet" href="../resets/reset.css">
-  <link rel="stylesheet" href="interrogacao.css">
+  <link rel="stylesheet" href="interrogar.css">
   <title>Interrogar</title>
 </head>
 
