--- a/pages/Margareth/Fase 03/fase3.html
+++ b/pages/Margareth/Fase 03/fase3.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/Margareth-avatar-removebg-preview.png" type="image/x-icon">
   <link rel="stylesheet" href="../../resets/reset.css">
-  <title>Margareth Fase 3</title>
+  <title>Margareth</title>
 </head>
 
 <body>
