--- a/pages/Thiago/Fase 03/fase3.html
+++ b/pages/Thiago/Fase 03/fase3.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/Thiago-avatar-removebg-preview.png">
   <link rel="stylesheet" href="../../resets/reset.css">
-  <title>Thiago Fase 3</title>
+  <title>Thiago</title>
 </head>
 
 <body>
