--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <body>
   <span>Assasinato na rua 13</span>
   <div class="button">
-    <a href="#"><button class="btn-grad">START</button></a>
+    <a href="pages/Inicio/inicio.html"><button class="btn-grad">START</button></a>
   </div>
 
+
+  <script src="./pages/resets/jquery-3.6.0.min.js"></script>
+  <script src="./pages/resets/reset.js"></script>
 </body>
 
 </html>
