--- a/pages/Inicio/inicio.html
+++ b/pages/Inicio/inicio.html
@@ -19,9 +19,13 @@
     <img class="images" src="img/img01.png" alt="">
   </div>
 
-  <div class="avancar">
-    <button>avançar &gt;</button>
+  <div class="button-interrogacao">
+    <a href="inicio02.html"><button class="btn-grad">
+        avançar &gt;</button></a>
   </div>
+
+  <script src="../resets/jquery-3.6.0.min.js"></script>
+  <script src="../resets/reset.js"></script>
 </body>
 
 </html>
