--- a/pages/winner/winner.html
+++ b/pages/winner/winner.html
@@ -15,14 +15,26 @@
     <span class="span-header"><img src="img/cd0a3d16394ae51de5c42b18ae51e7328865241er1-640-318_hq.gif"
         style="height: 50px; width: 400px;" alt=""></span>
   </header>
-  <div class="container" style="padding-top: 0px; margin-top: 0px;">
+  <div class="container" style="padding: 0px; margin: 0px;">
     <img class="images" src="img/winner_pubg-removebg-preview.png" style="max-width: 800px; padding-top: 0px;" alt="">
   </div>
-  <h1 style="text-align: center; font-size: 2.5rem; color: gold;">Você prendeu o Assassino!</h1>
+  <h1 style="text-align: center; font-size: 2.5rem; color: gold; margin-bottom: 20px;">Você prendeu o Assassino!</h1>
+
+  <div class="button-interrogacao">
+    <button onclick="comemorar()" class="btn-grad">
+      comemorar</button>
+  </div>
   <div class="container">
-    <img class="images" src="img/IMG1.png" style="max-width: 1000px;" alt="">
+    <img class="images" id="imgwinner" src="./img/IMG1.png" style="max-width: 800px; border-radius: 20px;" alt="">
   </div>
   <div class="button-interrogacao">
-    <a href="#"><button class="btn-grad">
+    <a href="../../index.html"><button class="btn-grad">
         &lt; voltar para o inicio</button></a>
   </div>
+
+
+  <script src="../resets/jquery-3.6.0.min.js"></script>
+  <script src="../resets/reset.js">
+  </script>
+  <script src="./winner.js"></script>
+</body>
