--- a/pages/Inicio/inicio02.html
+++ b/pages/Inicio/inicio02.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
+  <script src="../resets/jquery-3.6.0.min.js"></script>
+  <script src="inicio02.js"></script>
   <link rel="stylesheet" href="../resets/reset.css">
   <link rel="stylesheet" href="inicio.css">
   <title>Identificação</title>
@@ -15,16 +17,16 @@
   <header>
     <span class="span-header">início</span>
   </header>
+
   <div class="container">
     <img class="images" src="img/img02.png" alt="">
   </div>
 
-  <div class="avancar">
-    <button>avançar ></button>
+  <div class="button-interrogacao">
+    <a href="../Interrogacao/interrogar.html"><button class="btn-grad">avançar &gt;</button></a>
   </div>
 
 
-  <script src="inicio02.js"></script>
 </body>
 
 </html>
