--- a/pages/Interrogacao/interrogar.html
+++ b/pages/Interrogacao/interrogar.html
@@ -20,7 +20,7 @@
   </div>
   <div class="suspeitos">
     <div class="suspeito">
-      <a href="../Margareth/fase1/fase1.html">
+      <a href="../Margareth/Fase1/fase1.html">
         <img src="img/Margareth.png" alt="">
         <span>Margareth</span>
       </a>
