--- a/pages/Inicio/inicio.html
+++ b/pages/Inicio/inicio.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="button-interrogacao">
-    <a href="inicio02.html"><button class="btn-grad">
+    <a href="./inicio1.html"><button class="btn-grad">
         avançar &gt;</button></a>
   </div>
 
