--- a/pages/prenderassassino/prender.html
+++ b/pages/prenderassassino/prender.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  <header>
+    <span class="span-header">Prender o Assassino</span>
+    <audio id="music" controls loop="true" autoplay="true" preload="auto" src="../musica1.mp3"
+      style="max-width:250px; height: 30px; margin-left: auto;"></audio>
+  </header>
   <h1>QUEM É O ASSASSINO?</h1>
   <div class="cards">
     <div class="card" onclick="margareth()">
