--- a/pages/winner/winner.html
+++ b/pages/winner/winner.html
@@ -22,7 +22,7 @@
 
   <div class="button-interrogacao">
     <button onclick="comemorar()" class="btn-grad">
-      comemorar</button>
+      &lt; comemorar &gt;</button>
   </div>
   <div class="container">
     <img class="images" id="imgwinner" src="./img/IMG1.png" style="max-width: 800px; border-radius: 20px;" alt="">
