--- a/pages/winner/winner.html
+++ b/pages/winner/winner.html
@@ -7,16 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="../resets/reset.css">
+  <link rel="stylesheet" href="./winner.css">
   <title>Winner</title>
 </head>
 
 <body>
   <header style="background-color: #020303;">
-    <span class="span-header"><img src="img/cd0a3d16394ae51de5c42b18ae51e7328865241er1-640-318_hq.gif"
-        style="height: 50px; width: 400px;" alt=""></span>
+    <span class="span-header"><img src="img/cd0a3d16394ae51de5c42b18ae51e7328865241er1-640-318_hq.gif" alt=""></span>
   </header>
-  <div class="container" style="padding: 0px; margin: 0px;">
-    <img class="images" src="img/winner_pubg-removebg-preview.png" style="max-width: 800px; padding-top: 0px;" alt="">
+  <div class="container">
+    <img class="images" src="img/winner_pubg-removebg-preview.png" alt="">
   </div>
   <h1 style="text-align: center; font-size: 2.5rem; color: gold; margin-bottom: 20px;">Você prendeu o Assassino!</h1>
 
