alterado texto da página winner

--- a/pages/winner/winner.html
+++ b/pages/winner/winner.html
@@ -28,7 +28,7 @@
     tesourão, para que ela não incomodasse e tratasse melhor a visinhança, porém Clotilde reagiu e conseguiu soltar uma
     das mãos, fazendo com que Ramon cortasse a mão de Thiago que ao tentar prende-lá esbarrou a mão ensanguentava na
     blusa de Margareth. Clotilde com uma das mãos livres conseguiu puxar a máscara de Ramon que acabou sendo exposto e
-    decidiu então matá-la, pois, ela chamaria a polícia e seriam presos.
+    decidiu então matá-la, pois, ela chamaria a polícia e seriam presos. Parece que não deu muito certo não é mesmo!
   </p>
 
   <div class="button-interrogacao">
